--- a/styles/style.css
+++ b/styles/style.css
@@ -5,22 +5,36 @@ body{
 }
 main{
     display: flex;
+    flex-direction: column;
     justify-content: center;
+    align-items: center;
 }
 .container{
+    margin-top: 21px;
     background-color: white;
     width: 870px;
     padding: 30px;
+    border-radius: 5px;
+}
+hr{
+    border: 1px solid #D1D1D1;
+    margin-bottom: 27px;
+
 }
 .section-title{
     color: violet;
     font-size: 24px;
+    margin-top: 3px;
 }
 /* Top players style */
+.top-players{
+    margin-bottom: 30px;
+}
 .players{
     display: grid;
     grid-template-columns: repeat(3,1fr);
     /* grid-template-columns: 1fr 1fr 1fr:; */
+    grid-row-gap: 30px;
 }
 .player{
     display: flex;
@@ -32,4 +46,81 @@ main{
 }
 .player-name{
     margin-left: 16px;
+    font-size: 18px;
+}
+/* top blog styles */
+.blogs{
+    display: grid;
+    grid-template-columns: repeat(2,1fr);
+    grid-row-gap: 26px;
+}
+.blog{
+    display: flex;
+}
+.blog .thumbnail img{
+    width: 177px;
+    height: 117px;
+}
+.blog-info{
+    margin-left: 16px;
+}
+.blog-title{
+    font-size: 20px;
+}
+.blog-auther{
+    color: #9F9F9F;
+    font-size: 16px;
+}
+.blog-auther a{
+    text-decoration: none;
+    font-size: 16px;
+    font-size: 16px;
+    color: #562EFF;
+}
+/* Leatst course */
+.courses{
+    display: grid;
+    grid-template-columns: repeat(3,1fr);
+    grid-column-gap: 24px;
+}
+.course .course-banner img{
+    width: 224px;
+    height: 104px;
+
+}
+.fa-star.filled{
+    color: #FFC014;
+}
+.fa-star.empthy{
+    color: wheat;
+}
+.course-info{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+/*---------- media quaries
+        ---------- */
+        /* Mobile Devices */
+        @media only screen and (max-width:688px){
+            .container{
+                width: 100%;
+            }
+            .players, .blogs, .courses{
+                grid-template-columns: repeat(1, 1fr);
+            }
+            .player, .blog .course{
+                flex-direction: column;
+            }
+        }
+@media only screen and (min-width: 688px) and (max-width: 992px){
+    .container{
+        width: 100%;
+    }
+    .players, .blogs, .courses{
+        grid-template-columns: repeat(2, 1fr);
+    }
+    .player, .blog .course{
+        flex-direction: column;
+    }
 }
